[package]
name = "non-fungible-token-wrapper"
version = "1.0.0"
authors = ["Octopus Network"]
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
near-contract-standards = { version = "4.0.0" }
near-sdk = { version = "4.0.0" }
near-units = "0.2.0"
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "wrapped-appchain-nft",
  "test-approval-receiver",
  "test-token-receiver",
]
